--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "compile": "rimraf dist && tsc && babel src --out-dir dist --extensions .ts",
     "nd": "nodemon",
-    "test": "cd ../.. && npm run test2"
+    "test": "cd ../.. && npm run test2",
+    "create-gordion-migration": "npx migrate create -t src/migrater/templates/standard.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.16",
@@ -20,13 +21,13 @@
     "typescript": "^4.2.4",
     "@types/node": "^15.0.1",
     "chalk": "^2.4.2",
-    "loglevel": "^1.7.1",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2"
   },
   "dependencies": {
     "bottlejs": "^2.0.0",
     "filehound": "^1.17.4",
+    "loglevel": "^1.7.1",
     "find-my-way": "^4.1.0",
     "nunjucks": "^3.2.3",
     "migrate": "^1.7.0"
