--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "nd": "nodemon",
     "create-migration": "npx migrate create -t src/migrater/templates/standard.js"
   },
-  "directories": {
-    "bin": "dist/bin"
+  "bin": {
+    "gordion-migration-create": "dist/bin/gordion-migration-create.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.16",
