--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "create-migration": "npx migrate create -t src/migrater/templates/standard.js"
   },
   "bin": {
-    "gordion-migration-create": "dist/bin/gordion-migration-create.js"
+    "gordion-create-gordion-migration": "dist/bin/create-gordion-migration.js",
+    "gordion-compile-gordion": "dist/bin/compile-gordion.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.16",
