@types/child-process-promise dependency

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "nunjucks": "^3.2.3",
     "migrate": "^1.7.0",
     "commander": "^8.2.0",
-    "child-process-promise": "^2.2.1"
+    "child-process-promise": "^2.2.1",
+    "@types/child-process-promise": "^2.2.2"
   }
 }
