--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@types/nunjucks": "^3.1.5",
     "chalk": "^2.4.2",
     "nodemon": "^2.0.7",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "enquirer": "^2.3.6"
   },
   "dependencies": {
     "bottlejs": "^2.0.0",
